// Vitest Snapshot v1

exports[`Column > should have correct style > show column with correct style 1`] = `
<section
  class="column accent-color__planning-pink"
>
  <div
    class="column__content"
  >
    <div
      class="column__header"
    >
      <form
        class="note-input"
      >
        <input
          class="note-input__input"
          data-tip="CMD/CTRL + 1"
          maxlength="1024"
          placeholder="Add your note..."
          type="text"
          value=""
        />
        <button
          class="note-input__add-button"
          tabindex="-1"
          type="submit"
        >
          <svg
            class="note-input__icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              fill="currentColor"
            />
          </svg>
        </button>
      </form>
      <div
        class="column__header-title"
      >
        <div
          class="column__header-text-wrapper column__header-text-wrapper--hidden"
        >
          <svg
            class="column__header-hidden-icon"
            title="Column is hidden for all participants"
            viewBox="0 0 28 28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              stroke-linecap="round"
              stroke-linejoin="round"
            >
              <g
                stroke="currentColor"
                transform="translate(-3 -3)"
              >
                <g
                  transform="translate(5 5)"
                >
                  <path
                    d="m9.5186 18.72c0.81323 0.18792 1.646 0.28189 2.4814 0.28005 6.9966 0 12-7 12-7-1.1094-1.4544-2.4087-2.759-3.8644-3.88m-2.6441-1.72c-1.688-0.89747-3.5727-1.3779-5.4915-1.4-6.9966 0-12 7-12 7 1.6904 2.2132 3.8219 4.0642 6.2644 5.44m5.7356-0.84c2.6959 0 4.8814-2.149 4.8814-4.8m-1.4237-3.4c-1.9096-1.8778-5.0057-1.8778-6.9153 5e-8 -1.9096 1.8778-1.9096 4.9222-5e-8 6.8"
                    opacity="0.65"
                    stroke-width="1.5"
                  />
                  <line
                    stroke-width="2"
                    x1="24"
                    y2="24"
                  />
                </g>
              </g>
            </g>
          </svg>
          <h2
            class="column__header-text column__header-text--hidden"
          >
            Testheader
          </h2>
        </div>
        <span
          class="column__header-card-number"
        >
          0
        </span>
        <button
          class="column__header-edit-button"
          title="Settings"
        >
          <svg
            class="column__header-edit-button-icon"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="column__notes-wrapper"
    >
      <ul
        class="column__note-list"
      />
    </div>
  </div>
</section>
`;

exports[`Column should have correct style show column with correct style 1`] = `
<section
  class="column column--hidden accent-color__planning-pink"
>
  <div
    class="column__content"
  >
    <div
      class="column__header"
    >
      <form
        class="note-input"
      >
        <input
          class="note-input__input"
          data-tip="OPTION/ALT + 1"
          maxlength="1024"
          placeholder="Add your note..."
          type="text"
          value=""
        />
        <button
          class="note-input__add-button"
          tabindex="-1"
          type="submit"
        >
          <svg
            class="note-input__icon"
          >
            icon-add.svg
          </svg>
        </button>
      </form>
      <div
        class="column__header-title"
      >
        <div
          class="column__header-text-wrapper column__header-text-wrapper--hidden"
        >
          <svg
            class="column__header-hidden-icon"
            title="Column is hidden for all participants"
          >
            icon-hidden.svg
          </svg>
          <h2
            class="column__header-text column__header-text--hidden"
          >
            Testheader
          </h2>
        </div>
        <span
          class="column__header-card-number"
        >
          0
        </span>
        <button
          class="column__header-edit-button"
          title="Settings"
        >
          <svg
            class="column__header-edit-button-icon"
          >
            icon-dots.svg
          </svg>
        </button>
      </div>
    </div>
    <div
      class="column__notes-wrapper"
    >
      <ul
        class="column__note-list"
      />
    </div>
  </div>
</section>
`;
